v1.1.0/modules/schema/pages/class/NetworkModelProject2.adoc
= `NetworkModelProject2`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NetworkModelProject2`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]
*** *`NetworkModelProject2`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Child,`Child`>>
//| [[slots_table.Child]]<<Child,`Child`>>
| 0..* +
xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]
| _n/a_
| _n/a_

| <<CurrentState,`CurrentState`>>
//| [[slots_table.CurrentState]]<<CurrentState,`CurrentState`>>
| 1 +
xref::class/CurrentState.adoc[`CurrentState`]
| _n/a_
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]

| <<Parent,`Parent`>>
//| [[slots_table.Parent]]<<Parent,`Parent`>>
| 0..1 +
xref::class/NetworkModelProject2.adoc[`NetworkModelProject2`]
| _n/a_
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]

| <<closed,`closed`>>
//| [[slots_table.closed]]<<closed,`closed`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| _n/a_
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]

| <<created,`created`>>
//| [[slots_table.created]]<<created,`created`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| _n/a_
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]

| <<updated,`updated`>>
//| [[slots_table.updated]]<<updated,`updated`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| _n/a_
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]

| <<version,`version`>>
//| [[slots_table.version]]<<version,`version`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| _n/a_
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Child]
=== `Child`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProject2.Child`
| Cardinality
| 0..*
| Type
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

////
[.text-left]
--
<<slots_table.Child,&#10548;>>
--
////


//[discrete]
[#closed]
=== `closed`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.closed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

////
[.text-left]
--
<<slots_table.closed,&#10548;>>
--
////


//[discrete]
[#created]
=== `created`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.created`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

////
[.text-left]
--
<<slots_table.created,&#10548;>>
--
////


//[discrete]
[#CurrentState]
=== `CurrentState`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.CurrentState`
| Cardinality
| 1
| Type
| xref::class/CurrentState.adoc[`CurrentState`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

////
[.text-left]
--
<<slots_table.CurrentState,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#Parent]
=== `Parent`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.Parent`
| Cardinality
| 0..1
| Type
| xref::class/NetworkModelProject2.adoc[`NetworkModelProject2`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

////
[.text-left]
--
<<slots_table.Parent,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#updated]
=== `updated`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.updated`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

////
[.text-left]
--
<<slots_table.updated,&#10548;>>
--
////


//[discrete]
[#version]
=== `version`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent2.version`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`]


|===

////
[.text-left]
--
<<slots_table.version,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/NetworkModelProjectComponent2.adoc[`NetworkModelProjectComponent2`] | xref::class/NetworkModelProjectComponent2.adoc#Parent[`Parent`]


|===

